# HeyDocker

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
example/: test_command.py  test_database.py
extension/: .gitignore  Dockerfile  README.md  debug.sh  docker-compose.yaml  metadata.json  reload.sh
extension/backend/: .gitignore  main.py
extension/ui/: package-lock.json  package.json
extension/ui/src/: App.tsx  Message.tsx  Setting.tsx
src/heydocker/: __init__.py  __main__.py  config.py  database.py  main.py
src/heydocker/functions/: __init__.py  functions.py  gpt.py  utils.py
